--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+#list-menu{
+background: linear-gradient(90deg, rgba(237,237,237,0.7819502801120448) 88%, rgba(255,255,255,1) 100%, rgba(237,238,238,1) 100%);
+}
